# jiji

./: Cargo.toml  README.md
src/: bar.rs  config.rs  default_style.css  lib.rs  main.rs  module.rs  module_base.rs
src/i3/: mod.rs
src/plugins/: button.rs  i3.rs  mod.rs  pulseaudio.rs  text.rs
src/pulseaudio/: mod.rs  sink.rs  source.rs  util.rs
