[package]
name = "jiji"
version = "0.1.0"
authors = ["Masaya Suzuki <draftcode@gmail.com>"]
edition = "2018"

[dependencies]
i3ipc = "0.10.1"
lazy_static= "1.4.0"
once_cell = "1"
pulse = { version = "2.24.0", package = "libpulse-binding", default-features = false }
pulse_glib = { version = "2.24.0", package = "libpulse-glib-binding" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
xdg = "2.2.0"

[dependencies.gtk]
version = "0.14.0"
features = ["v3_22"]
